[WebGPU] Validation error inside runClearEncoder https://bugs.webkit.org/show_bug.cgi?id=277864 radar://133539340

Reviewed by Dan Glastonbury.

Metal bug impacting clears of 16xN or Nx16 textures is fixed in iOS 18
and macOS 15, so we can remove the workaround which clears them when
a draw call is not issued.

The logic is simplified assuming 'issuedDraw==true'

* LayoutTests/fast/webgpu/nocrash/fuzz-277864-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277864.html: Added.
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::endPass):

Canonical link: https://commits.webkit.org/282130@main