Source/WebGPU/WebGPU/RenderPassEncoder.mm
@@ -937,18 +937,12 @@ void RenderPassEncoder::endPass()
     auto endEncoder = ^{
         m_parentEncoder->endEncoding(m_renderCommandEncoder);
     };
-    auto issuedDraw = issuedDrawCall();
     bool useDiscardTextures = m_attachmentsToClear.count || m_clearDepthAttachment || m_clearStencilAttachment;
     bool hasTexturesToClear = m_allColorAttachments.count || m_attachmentsToClear.count || (m_depthStencilAttachmentToClear && (m_clearDepthAttachment || m_clearStencilAttachment));
 
-    if ((!issuedDraw || useDiscardTextures) && hasTexturesToClear) {
-        if (m_depthStencilView && m_depthStencilAttachmentToClear && !issuedDraw && !useDiscardTextures) {
-            m_clearDepthAttachment = Texture::containsDepthAspect(m_depthStencilView->format());
-            m_clearStencilAttachment = Texture::containsStencilAspect(m_depthStencilView->format());
-        }
-        if (useDiscardTextures)
-            endEncoder();
-        m_parentEncoder->runClearEncoder(useDiscardTextures ? m_attachmentsToClear : m_allColorAttachments, m_depthStencilAttachmentToClear, m_clearDepthAttachment, m_clearStencilAttachment, m_depthClearValue, m_stencilClearValue, useDiscardTextures ? nil : m_renderCommandEncoder);
+    if (useDiscardTextures && hasTexturesToClear) {
+        endEncoder();
+        m_parentEncoder->runClearEncoder(m_attachmentsToClear, m_depthStencilAttachmentToClear, m_clearDepthAttachment, m_clearStencilAttachment, m_depthClearValue, m_stencilClearValue, nil);
     } else
         endEncoder();
 
